Cleaning up code trying to fix Gump Failure.